# TAPP

./: 6月23日08宁志豪、何玉洁、杨承恩.txt  BattleLobby.qml  BattlePage.qml  Bonus_level.qml  Boss_level.qml  CMakeCache.txt  CMakeLists.txt  CoinGenerator.qml  CollisionDetector.qml  DaojuDetector.qml  DaojuGenerator.qml  GameControlPanel.qml  GameScreen.qml  Grounds.qml  Main.qml  MainMenu.qml  NetworkManager.cpp  NetworkManager.h  ObstacleGenerator.qml  Page_begin.qml  Page_jiesuan.qml  Player.qml  README.md  README.txt  Settings.qml  images.qrc  main.cpp  my-release-key.keystore  qtcsettings.cmake  密匙
android/: AndroidManifest.xml
android/gradle/: AndroidManifest.xml
程序文档/: 08宁志豪、何玉洁、杨承恩项目基础介绍.txt  08宁志豪、何玉洁、杨承恩项目工作安排和心得.txt  程序介绍文档.docx
